add logos and icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="public/colors.css">
   <link rel="stylesheet" href="public/forms.css">
   <link rel="stylesheet" href="public/grid.css">
+  <link rel="stylesheet" href="public/icons.css">
   <link rel="stylesheet" href="public/typography.css">
   <link rel="stylesheet" href="public/app-specific.css">
 </head>
@@ -350,6 +351,19 @@
       </div>
 
       <hr>
+      <h4>Code: Text-Only Buttons</h4>
+      <p>Text-only buttons use the <code>.text-only</code> class. This must be used in conjunction with the <code>button</code> tag or <code>.button</code> class.</p>
+      <xmp class="code">
+  <button class="text-only">Some Text Button</button>
+      </xmp>
+      <h4>What the above code does...</h4>
+      <div class="line">
+        <div class="unit size1of1">
+          <button class="text-only">Some Text Button</button>
+        </div>
+      </div>
+
+      <hr>
       <h4>Code: Text Inputs</h4>
       <p>Text inputs use the <code>input</code> tag. Note the wrapping of the input field and the label within the <code>field-wrap</code> class.</p>
       <xmp class="code">
@@ -368,13 +382,122 @@
         </div>
       </div>
 
-
-
     </div>
     <div class="divider-sg--v"></div>
     <!-- /FORMS -->
 
 
+
+    <!-- ICONS & LOGO -->
+    <div class="line">
+      <h1 class="u-align--center">Logos & Icons</h1>
+
+      <hr>
+      <h4>Code: Large Logos</h4>
+      <p>The logo classes are modular.</p>
+      <p>To handle large sizes, you can use the <code>.logo--large</code> or <code>.logo--large__with-text</code> classes in conjunction with the <code>.logo</code> class.</p>
+      <p>To handle coloring you can use the <code>.logo--dark</code> and <code>.logo--light</code> classes.</p>
+      <xmp class="code">
+  <i class="logo logo--large__with-text logo--dark"></i>
+  <i class="logo logo--large logo--light"></i>
+      </xmp>
+      <h4>What the above code does...</h4>
+      <div class="line">
+        <div class="unit size1of2">
+          <i class="logo logo--large__with-text logo--dark"></i>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="logo logo--large logo--light"></i>
+        </div>
+      </div>
+
+      <hr>
+      <h4>Code: Small Logos</h4>
+      <p>To handle small sizes, you only have access to the <code>.logo--small</code>class in conjunction with the <code>.logo</code> class.</p>
+      <p>To handle coloring you can use the <code>.logo--gray</code> and <code>.logo--multi</code> classes.</p>
+      <xmp class="code">
+  <i class="logo logo--small logo--gray"></i>
+  <i class="logo logo--small logo--multi"></i>
+      </xmp>
+      <h4>What the above code does...</h4>
+      <div class="line">
+        <div class="unit size1of2">
+          <i class="logo logo--small logo--gray"></i>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="logo logo--small logo--multi"></i>
+        </div>
+      </div>
+
+
+
+
+
+      <!-- <hr>
+      <h4>Code: Arrow Icons</h4>
+      <p>To handle small sizes, you only have access to the <code>.logo--small</code>class in conjunction with the <code>.icon-arrow--*</code> classes.</p>
+      <xmp class="code">
+  <icon class="logo logo--small logo--gray"></icon>
+  <icon class="logo logo--small logo--multi"></icon>
+      </xmp>
+      <h4>What the above code does...</h4>
+      <div class="line">
+        <div class="unit size1of2">
+          <icon class="logo logo--small logo--gray"></icon>
+        </div>
+        <div class="lastUnit size1of2">
+          <icon class="logo logo--small logo--multi"></icon>
+        </div>
+      </div> -->
+
+
+
+
+
+
+      <hr>
+      <h4>Code: General Icons</h4>
+      <div class="line border--bottom">
+        <div class="unit size1of2">
+          <xmp class="code"><i class="arrow--left"></i></xmp>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="icon arrow--left"></i>
+        </div>
+      </div>
+
+      <div class="line border--bottom">
+        <div class="unit size1of2">
+          <xmp class="code"><i class="arrow--right"></i></xmp>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="icon arrow--right"></i>
+        </div>
+      </div>
+
+      <div class="line border--bottom">
+        <div class="unit size1of2">
+          <xmp class="code"><i class="arrow--up"></i></xmp>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="icon arrow--up"></i>
+        </div>
+      </div>
+
+      <div class="line border--bottom">
+        <div class="unit size1of2">
+          <xmp class="code"><i class="arrow--down"></i></xmp>
+        </div>
+        <div class="lastUnit size1of2">
+          <i class="icon arrow--down"></i>
+        </div>
+      </div>
+
+
+
+    </div>
+    <div class="divider-sg--v"></div>
+    <!-- /ICONS & LOGO -->
 
 
 
