update documentation + navigation verbiage

--- a/index.html
+++ b/index.html
@@ -515,10 +515,61 @@
 
 
 
-  <!-- NAVIGATION -->
+  <!-- SITE NAVIGATION -->
   <div class="container">
     <div class="line">
-      <h1 class="u-align--center">Navigation</h1>
+      <h1 class="u-align--center">Site Navigation</h1>
+
+      <hr>
+      <h4>Code: Site Navigation</h4>
+      <p>These are the styles for the primary site navigation. It can either move with the page (as in the immediate sample code below), or be fixed to the top of the page (as it is on the current page you're viewing). Both code examples are below.</p>
+      <xmp class="code">
+  <div class="main-nav">
+    <ul>
+      <li><a class="main-nav-link">Home</a></li>
+      <li><a class="main-nav-link">Examples</a></li>
+      <li><a class="main-nav-link">Pages</a></li>
+    </ul>
+  </div>
+      </xmp>
+      <h4>What the above code does...</h4>
+      <div class="line">
+        <div class="lastUnit size1of1">
+          <div class="main-nav">
+            <ul>
+              <li><a class="main-nav-link">Home</a></li>
+              <li><a class="main-nav-link">Examples</a></li>
+              <li><a class="main-nav-link">Pages</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+
+      <p><strong>Fixing to the page top:</strong> You can also fix the primary site navigation to the top spanning the full width (simply look at the header navigation on this page). Just augment the <code>.main-nav</code> class with the <code>.main-nav--fixed</code> class.</p>
+      <xmp class="code">
+  <div class="main-nav main-nav--fixed">
+    <ul>
+      ...
+    </ul>
+  </div>
+      </xmp>
+
+      <br>
+      <p><strong>A note about the page container:</strong> [!!!ADD NOTE HERE!!!].</p>
+
+    </div>
+    <div class="divider-sg--v"></div>
+  </div>
+  <!-- /SITE NAVIGATION -->
+
+
+
+  <!-- SITE FOOTER -->
+  <div class="container">
+    <div class="line">
+      <h1 class="u-align--center">Site Footer</h1>
 
       <hr>
       <h4>Code: Primary Site Navigation</h4>
@@ -559,8 +610,7 @@
     </div>
     <div class="divider-sg--v"></div>
   </div>
-  <!-- /NAVIGATION -->
-
+  <!-- /SITE FOOTER -->
 
 
 
