add working base64 to minified css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="public/icons.css">
   <link rel="stylesheet" href="public/navigation.css">
   <link rel="stylesheet" href="public/typography.css">
-  <!-- <link rel="stylesheet" href="public/styleguide.min.css"> -->
+  <!-- <link rel="stylesheet" href="public/colab-styleguide.min.css"> -->
   <link rel="stylesheet" href="public/app-specific.css">
 </head>
 <body>
